--- a/README
+++ b/README
@@ -6,17 +6,16 @@ Ruby/SerialPort is a Ruby library that provides a class for using
 RS-232 serial ports.  This class also contains low-level functions to
 check and set the current state of the signals on the line.
 
-The native Windows version of this library supports Microsoft's Visual C++
-and Borland's C++ compilers.
+The native Windows version of this library supports Microsoft's Visual C++, Borland's C++, and MinGW compilers.
 
 -- Installation --
 
-This gem is hosted at GitHub. Before you can install this, or any other GitHub gem you must
+This gem is hosted at Gemcutter. Before you can install this, or any other Gemcutter gem you must
 add it as a gem source:
-  gem sources -a http://gems.github.com
+  gem sources -a http://gemcutter.org
 
 Then you can install the gem as normal:
-  sudo gem install toholio-serialport
+  sudo gem install serialport
 
 -- Testing --
 
@@ -154,3 +153,4 @@ GPL
 Guillaume Pierronnet <moumar@netcourrier.com>
 Alan Stern <stern@rowland.harvard.edu>
 Tobin Richard <tobin.richard@gmail.com>
+Hector Parra <hector@hectorparra.com>
