--- a/README
+++ b/README
@@ -154,3 +154,4 @@ Guillaume Pierronnet <moumar@netcourrier.com>
 Alan Stern <stern@rowland.harvard.edu>
 Tobin Richard <tobin.richard@gmail.com>
 Hector Parra <hector@hectorparra.com>
+Ryan C. Payne <rpayne-oss@bullittsystems.com>
