--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,14 @@
-1.0.0 => 01/12/2010:    Fixed x86_64 segmentation fault issues. Windows 1.9 support.
+1.0.2 => 04/06/2010:	[FIXED] Passing a block into open did not properly handle a return from within the block
 
-0.7.4 => 10/12/2009:    Conditional 1.8.6 & 1.9 support (POSIX only). MinGW support.
+1.0.1 => 01/20/2010:   	[FIXED] Conditional RB_SERIAL_EXPORT (Visual Studio)
 
-0.7.3 => 10/09/2009:    http://makrotopia.org/browser/makrosys/makrobe/ruby-serialport/patches/10-fix-for-ruby-1.9 
-                        applied for 1.9 support (POSIX only)
+1.0.0 => 01/12/2010:    [FIXED] x86_64 segmentation fault
+						[NEW] Windows Ruby 1.9 support
+
+0.7.4 => 10/12/2009:    [NEW] Conditional 1.8.6 & 1.9 support (POSIX only).
+						[NEW] MinGW support.
+
+0.7.3 => 10/09/2009:    [NEW] POSIX Ruby 1.9 support
 
 0.7.2 => 02/09/2008:    Fix several Windows and POSIX compilation problems.
                         Make GCC compile the code without any warnings.
