--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,32 +1,35 @@
+1.3.1 => 07/26/2014:    [FIXED] Ruby 2.2 support
+                        [NEW] UNIX MARK/SPACE parity (CMSPAR) support
+
 1.3.0 => 11/17/2013:    [NEW] flush_input() and flush_output() methods [Manuel A. Güílamo (MaG)]
 
-1.2.3 => 11/04/2013:	[FIXED] Improved documentation (yard)
+1.2.3 => 11/04/2013:    [FIXED] Improved documentation (yard)
 
-1.2.2 => 11/03/2013:	[FIXED] warning: already initialized constant VERSION
+1.2.2 => 11/03/2013:    [FIXED] warning: already initialized constant VERSION
 
-1.2.1 => 10/25/2013:	[FIXED] removed absurd circular dependency
+1.2.1 => 10/25/2013:    [FIXED] removed absurd circular dependency
 
-1.2.0 => 10/25/2013:	[NEW] rake-compiler, bundler, and travis ci integration
+1.2.0 => 10/25/2013:    [NEW] rake-compiler, bundler, and travis ci integration
 
-1.1.0 => 05/14/2012:	[NEW] Ruby 2.0 Support [Aaron Patterson (tenderlove)] 
+1.1.0 => 05/14/2012:    [NEW] Ruby 2.0 Support [Aaron Patterson (tenderlove)]
                         [FIXED] Support for baud rates up to 1000000 in Windows [Will Koehler (willkoehler)]
 
-1.0.4 => 07/17/2010:	[FIXED] [Windows] No longer restricted to specific bitrates
-						[FIXED] [Windows] Removed potentially insecure sprintf() use
-						[FIXED] [Windows] Workaround for rb_sys_fail not checking GetLastError()
-						
-1.0.3 => 04/08/2010:	[FIXED] [Windows] Could not specify 10 or "COM10" or higher 
-						[FIXED] [Windows] Warning passing INT instead of LONG to GetCommModemStatus
+1.0.4 => 07/17/2010:    [FIXED] [Windows] No longer restricted to specific bitrates
+                        [FIXED] [Windows] Removed potentially insecure sprintf() use
+                        [FIXED] [Windows] Workaround for rb_sys_fail not checking GetLastError()
 
-1.0.2 => 04/06/2010:	[FIXED] Passing a block into open did not properly handle a return from within the block
+1.0.3 => 04/08/2010:    [FIXED] [Windows] Could not specify 10 or "COM10" or higher
+                        [FIXED] [Windows] Warning passing INT instead of LONG to GetCommModemStatus
 
-1.0.1 => 01/20/2010:   	[FIXED] Conditional RB_SERIAL_EXPORT needed for Visual Studio bonked GCC
+1.0.2 => 04/06/2010:    [FIXED] Passing a block into open did not properly handle a return from within the block
+
+1.0.1 => 01/20/2010:    [FIXED] Conditional RB_SERIAL_EXPORT needed for Visual Studio bonked GCC
 
 1.0.0 => 01/12/2010:    [FIXED] x86_64 segmentation faults
-						[NEW] Windows Ruby 1.9 support
+                        [NEW] Windows Ruby 1.9 support
 
 0.7.4 => 10/12/2009:    [NEW] Conditional 1.8.6 & 1.9 support (POSIX only).
-						[NEW] MinGW support.
+                        [NEW] MinGW support.
 
 0.7.3 => 10/09/2009:    [NEW] POSIX Ruby 1.9 support
 
